--- a/templates/index.html
+++ b/templates/index.html
@@ -283,7 +283,7 @@
       income = $form.find("input[id='income']" ).val()
 
      var settings = {
-  "url": "http://localhost:5000/prediction",
+  "url": "/prediction",
   "method": "POST",
   "timeout": 0,
   "headers": {
