--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,7 @@
                     <li><strong style="color:#E75480">Demographics - Income:</strong><a href="https://www.icpsr.umich.edu/web/RCMD/studies/34085/datasets/0001/variables/INCOME2?archive=RCMD" target="_blank"> Income Categories</a></li>
                     <li>Hover over each label to know more detail</li>
                     <li>After completing the self-assessment head below the submit button to understand your result!</li>
+                    <li>I would greatly appreciate if you could take some time to fill <a href="https://forms.gle/6W6YjxmQqcVvNSXP7" target="blank">this short feedback form</a></li>
                 </ul>
             </div>
         </div>
@@ -242,7 +243,7 @@
         <footer class="my-5 pt-5 text-muted text-center text-small">
             <p class="mb-1">&copy; 2023 TechAware</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://shubhankarnehra.com/contact/">Contact Me</a></li>
+                <li class="list-inline-item"><a href="https://shubhankarnehra.com/contact/" target="blank">Contact Me</a></li>
             </ul>
         </footer>
     </div>
